# soundpad-bard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
src/: main.rs
src/application/ports/: config_repository.rs  hotkey_listener.rs  mod.rs  obs_connector.rs
src/application/use_cases/: activate_bard.rs  mod.rs  pause_bard.rs  play_sound_effect.rs  register_hotkey.rs  skip_bard_track.rs
src/domain/entities/: audio_clip.rs  bard_state.rs  config.rs  hotkey.rs  mod.rs
src/domain/services/: ducking_policy.rs  hotkey_conflict_checker.rs  mod.rs
src/infrastructure/: crypto.rs  mod.rs
src/infrastructure/hotkeys/: global_hotkey_listener.rs  mod.rs
src/infrastructure/obs/: mod.rs  obws_connector.rs
src/infrastructure/persistence/: json_config_repository.rs  mod.rs
src/ui/: app.rs  mod.rs  tray.rs
src/ui/views/: bard_view.rs  mod.rs  settings_view.rs  soundpad_view.rs
