[package]
name = "soundpad_bard"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
obws = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
global-hotkey = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
eframe = "0.34"
rfd = "0.15"
rand = "0.8"
