[package]
name = "soundpad_bard"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
obws = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
global-hotkey = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
eframe = "0.34"
rfd = "0.15"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
tray-icon = "0.24"
muda = "0.19"
crossbeam-channel = "0.5"
image = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", package = "gtk" }
